# fashion-mnist-mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: train.py
src/fashion_mnist/: config.py  data.py  engine.py  model.py  predict.py  serve.py  utils.py
tests/: test_api.py  test_model.py
