[project]
name = "fashion-mnist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "subbuK", email = "ksr.subbu123@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.2",
    "pillow>=12.2.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
